# Manalytics

./: .claudeignore  .env.dev  .env.example  .env.prod  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  API_GUIDE.md  AUDIT_SCRIPTS_ACTIFS.md  CLAUDE.md  COMPARAISON_TOURNOIS.md  COMPARISON_WITH_JILIAC.md  CONTRIBUTING.md  DIAGNOSTIC_STRUCTURE_PROJET.md  Dockerfile  EQUIPE_HANDOFF_GUIDE.md  FINAL_INTEGRATION_CHECK.md  FIX_MATCHING_AND_ANALYSIS.md  GUIDE_GRAPHIQUES.md  HANDOFF.md  HANDOFF_SUMMARY.md  INTEGRATION_MTGOArchetypeParser_COMPLETE.md  INTEGRATION_MTGOFormatData_REPORT.md  LEAGUE_ANALYSIS_FIX.md  LISTE_TOURNOIS_19.md  MANALYTICS_CORRECTIONS.md  MANALYTICS_IMPLEMENTATION_GUIDE.md  MANALYTICS_PROJECT_DOCUMENTATION_GUIDE.md  MANALYTICS_PYTHON_MIGRATION_ANALYSIS.html  MIGRATION_COMPARISON_REPORT.md  MTGO_ARCHETYPE_PARSER_MAPPING.md  Makefile  NOUVEAU_PROJET_BRIEF.md  OPERATIONS.md  PLAN_CORRECTION_MANALYTICS.md  PLAN_RESTRUCTURATION_URGENTE.md  PROBLEMATIQUE_PRIORITAIRE_A_REGLE.md  PROMPT_CONTINUITE_v3.2.1.md  PROMPT_CONTINUITE_v3.3.0.md  (+243 more)
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
Api_token_and_login/: api_topdeck.txt  melee_login.json
Test Compare/: CORRECTION_RESULTS.md  DIAGNOSTIC_DIFFERENCES.md  METRICS_SUMMARY.md  README_COMPARISON.md
analysis_output/: archetype_stats.csv  complete_report.json  dashboard_complete.html  matchup_matrix.csv  matchup_matrix.json
backup_before_reboot_20250722_112400/: ADVANCED_ANALYTICS.md  ALIQUANTO3_TO_MANALYTICS_MAPPING.md  API_REFERENCE.md  API_REFERENCE_ADVANCED_ANALYTICS.md  ARCHETYPE_COLOR_MANAGEMENT.md  ARCHITECTURE.md  ARCHITECTURE_QUICKREAD.md  COLOR_GUIDE_EXPERT.md  DATA_VISUALIZATION_EXPERTISE.md  DEVELOPMENT_RULES.md  ECOSYSTEM_REFERENCE_GUIDE_ULTIMATE.md  ECOSYSTEM_REFERENCE_ULTIMATE_COMPLETE.md  GUIDE_DEVELOPPEUR.md  GUIDE_PARTAGE_ANALYSES.md  IMPLEMENTATION_SUMMARY_v0.3.5.md  MELEE_SCRAPER_ANALYSIS.md  MODIFICATION_TRACKER.md  MTGO_CHALLENGE_DUPLICATES_ANALYSIS.md  MTGO_SCRAPING_SUCCESS_REPORT.md  NEW_WORKFLOW_GUIDE.md  ORCHESTRATOR_INTEGRATION.md  SERVICE_TRANSFER_REPORT.md  SETUP_DEV.md  STEP1_DATA_COLLECTION.md  STEP1_IMPLEMENTATION_LOG.md  TODO_ONE_DAY.md  USER_GUIDE_ADVANCED_ANALYTICS.md  __init__.py  add_tracker_entry.py  advanced_mtgo_scraper.py  analyze_melee_id_discovery.py  analyze_missing_challenge.py  check_challenge_duplicates.py  check_no_mocks.py  clean_cache.sh  comprehensive_scraping.py  comprehensive_yearly_scraping.py  create_analysis_zip.py  create_backup_tag.sh  create_challenge_comparison_report.py  (+37 more)
config/: constants.py  env.example  logging.yaml  logging_config.py  no_mock_policy.py  settings.py  sources.json
data/: .gitkeep  mtgodata
database/: db_manager.py  db_pool.py  schema.sql
docs/: ADVANCED_ANALYTICS.md  ALIQUANTO3_TO_MANALYTICS_MAPPING.md  ANALYSIS_TEMPLATE_SPECIFICATION.md  API_REFERENCE.md  API_REFERENCE_ADVANCED_ANALYTICS.md  ARCHITECTURE.md  ARCHITECTURE_CACHE_SYSTEM.md  ARCHITECTURE_QUICKREAD.md  ARCHITECTURE_SUMMARY.md  CACHE_PRESERVATION_RULE.md  CACHE_STRATEGY.md  CACHE_SYSTEM_IMPLEMENTATION.md  CHANGELOG.md  CLEANUP_REPORT.md  COMPLETE_PIPELINE_DIAGRAM.html  CONSENSUS_DECK_GENERATOR.md  CONTINUATION_PROMPT_PHASE_4.md  CRITICAL_FILES_ANALYSIS.md  DATA_FLOW_VISUALIZATION.html  DATA_VISUALIZATION_EXPERTISE.md  DECK_COMPARISON_FEATURE.md  DEPENDENCIES.md  DEPENDENCIES_IMPACT_ANALYSIS.md  DEVELOPMENT_RULES.md  ECOSYSTEM_REFERENCE_GUIDE_ULTIMATE.md  FILES_CHRONOLOGY_ANALYSIS.md  FILE_DISCOVERY_PROCESS.html  FINAL_STATUS_REPORT.md  GUIDE_DEVELOPPEUR.md  GUIDE_NOUVELLE_EQUIPE_2025.md  GUIDE_PARTAGE_ANALYSES.md  HANDOFF_SUMMARY.md  HOVER_IMPLEMENTATION_TECHNICAL.md  IDEAL_PROJECT_STRUCTURE.md  IMPLEMENTATION_SUMMARY_v0.3.4.md  IMPLEMENTATION_SUMMARY_v0.3.5.md  IMPLEMENTATION_VS_BIBLE_COMPARISON.md  INNOVATION_DETECTOR_CONCEPT.md  INSTRUCTIONS_NOUVELLE_EQUIPE.md  JILIAC_ALL_CALCULATION_METHODS.md  (+58 more)
enforcement/: strict_mode.py
examples/: cache_demo.py  resilience_demo.py
guide/: index.html
manalytics/: README.md  analyze.py  installation_report.md  requirements.txt  setup.sh  test_connections.py
migrations/: env.py
modern_analysis/: beautiful_report.html  complete_report.json
monitoring/: prometheus.yml
old ne pas regarder pour le moment/: MTGO_LISTENER_INTEGRATION.md  ManatraderClient.py  MtgMeleeClientV2_simple.py  mtgo_cache_manager.py  mtgo_listener.py  test_mtgo_listener.py
real_data/: complete_dataset.csv  complete_dataset.json  complete_dataset.parquet  complete_dataset.stats.json  legacy_tournaments.json  modern_tournaments.json  pioneer_tournaments.json  standard_tournaments.json
scrapers/: melee_scraper_complete.py  melee_scraper_robust.py  mtgo_scraper_enhanced.py  mtgo_scraper_enhanced_from_commit.py  mtgo_scraper_robust.py  mtgo_scraper_v2.py
scripts/: README.md  add_tracker_entry.py  analyze_competitive_only.py  analyze_without_leagues.py  audit_project.py  check_no_mocks.py  clean_cache.sh  clean_git_secrets.sh  compare_mtgo_challenges_only.py  compare_tournaments_with_jiliac.py  create_analysis_july_1_20.py  create_analysis_zip.py  create_archetype_visualization.py  create_archetype_visualization_interactive.py  create_archetype_visualization_mtg_complete.py  create_archetype_visualization_plotly.py  create_archetype_visualization_plotly_fixed.py  create_archetype_visualization_plotly_gradients.py  create_archetype_visualization_plotly_gradients_working.py  create_archetype_visualization_plotly_matches.py  create_backup_tag.sh  create_basic_visualization.py  create_test_tournament_data.py  create_winrate_mustache_graph.py  emergency_june_2025_scraping.py  emergency_rollback.sh  fetch_archetype_rules.py  filter_melee_tournaments.py  final_check.py  final_integration_test.py  final_report.py  fixed_mtgo_scraper.py  force_mtgo_scraping_6h.py  healthcheck.py  import_archetype_rules.py  (+31 more)
(+1823 files in other folders)
